[package]
name = "backdrop_arc"
version = "0.1.8"
authors = ["Qqwy / Marten"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Qqwy/rust-backdrop_arc"
description = "Arc which will drop its contents in the background (configurable) when the refcount becomes zero. (A fork of triomphe)"
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]

[features]
std = []
default = ["serde", "stable_deref_trait", "std"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
stable_deref_trait = { version = "1.1.1", default-features = false, optional = true }
unsize = { version = "1.1", optional = true }
arc-swap = { version = "1.3.0", optional = true }
backdrop = { path = "../backdrop/" }