[package]
name = "backdrop_arc"
version = "0.3.0"
authors = ["Qqwy / Marten"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Qqwy/rust-backdrop_arc"
description = "Arc which will drop its large or complex contents in the background with Backdrop! (later, on another thread, or both! Fully customizable! Tokio supported!)"
keywords = ["arc", "ffi", "sync", "data-structure", "drop"]
categories = ["concurrency", "data-structures", "no-std", "memory-management", "asynchronous"]

[features]
std = ["backdrop/std"]
default = ["std"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
stable_deref_trait = { version = "1.1.1", default-features = false, optional = true }
unsize = { version = "1.1", optional = true }
arc-swap = { version = "1.3.0", optional = true }
backdrop = { version = "0.1.6", default-features = false, features = ["alloc"]}
triomphe = { version = "0.1.8", optional = true }
yoke = {version = "0.7.1", optional = true}


[package.metadata.docs.rs]
features = ["std", "serde", "stable_deref_trait", "unsize", "arc-swap", "triomphe", "yoke"]